Fix alignment for the PRO logo in the add-ons list on the settings dashboard.

--- a/css/admin-dashboard-301-beta-3.css
+++ b/css/admin-dashboard-301-beta-3.css
@@ -93,10 +93,6 @@ p.submit {
   margin-bottom: 20px;
 }
 
-.fc-addons__item--pro .fc-addons__item-header {
-  align-items: center;
-}
-
 .fc-addons__item-image {
   float: left;
   width: 70px;
