--- a/sass/admin/_admin-dashboard-addons.scss
+++ b/sass/admin/_admin-dashboard-addons.scss
@@ -47,10 +47,6 @@
 	margin-bottom: 20px;
 }
 
-.fc-addons__item--pro .fc-addons__item-header {
-     align-items: center;
-}
-
 
 
 .fc-addons__item-image {
